// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should render an header 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex gap-3 items-center"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex gap-3 items-center"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex gap-3 items-center"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Extra 1
          </div>
        </button>
        <button
          class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Extra 2
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="py-4 w-full first:pt-8 last:pb-8"
  >
    <div
      class="px-6 mx-auto md:px-10 lg:container"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex gap-3 items-center"
          >
            <div
              class="flex flex-col gap-2"
            >
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Header test
              </h1>
               
              <div
                class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Subtitle test
              </div>
            </div>
          </div>
        </div>
        <div>
          extra
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="flex justify-between items-center py-6 px-8 w-full dark:bg-black bg-theme-secondary-100 h-13"
  >
    <div
      class="flex flex-col gap-2"
    >
      <h1
        class="mb-0 text-lg font-semibold"
      >
        Header test
      </h1>
      <div
        class="flex items-center text-sm leading-5 text-theme-secondary-text"
      >
        Subtitle test
      </div>
    </div>
    extra
  </section>
</DocumentFragment>
`;
